# uni-tasks

./: .gitignore  README.md
algorithms/checkers/: payment.cpp  solid_payment.cpp
algorithms/critical_section_problem/: bakery.c  dekker.c  peterson.c
algorithms/dijkstra/: CMakeLists.txt  main.cpp
algorithms/movies/: CMakeLists.txt  main.cpp  movies
algorithms/movies/algorithms/: sorting.cpp  sorting.h
algorithms/movies/model/: movie.cpp  movie.h
algorithms/movies/utils/: browser.cpp  browser.h
car_co2_emission/: song.txt
data_structures/ds_tester/: README.md  imgui.ini  main.cpp
data_structures/gui/: LICENSE.md  Makefile  README.md  main.cpp
data_structures/lru_cache/: lru_cache.py  main.py
games/tictactoe/: game.cpp  game.h  main.cpp
image_processing/: README.md
image_processing/aliasing2d/: main.py
image_processing/demosaic/: constants.py  main.py
image_processing/interpolation/: interpolations.py  main.py
image_processing/noise_reduction/: main.py
image_processing/photoDemosaic/: constants.py  demosaic.py  main.py  mosaic.py
image_processing/rotating/: main.py
linux_cli/grep/: main.c  test.txt
linux_cli/rev/: main.c
linux_cli/tail/: main.c  test.txt
linux_cli/uniq/: main.c
linux_cli/wc/: main.c
multithreading/: multithreading.md
multithreading/dining_philosophers/: CMakeLists.txt  main.c  philosopher.c  philosopher.h  text_interface.c  text_interface.h  utils.c  utils.h
multithreading/gamma/: main.cpp
multithreading/readers-writers/: main.c
tictactoe/: CMakeLists.txt  game.cpp  game.h  main.cpp
(+106 files in other folders)
